--- a/package.json
+++ b/package.json
@@ -17,5 +17,14 @@
     "babel-loader": "^8.0.2",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0"
+  },
+  "dependencies": {
+    "@types/react": "^16.0.31",
+    "@types/react-dom": "^16.0.3",
+    "awesome-typescript-loader": "^5.2.1",
+    "react": "^16.5.0",
+    "react-dom": "^16.5.0",
+    "source-map-loader": "^0.2.4",
+    "typescript": "^3.5.3"
   }
 }
